[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hn-virality-predictor"
version = "0.1.0"
description = "Predict Hacker News post virality using LightGBM"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=12.0.0",
]

[tool.setuptools]
# Installs features.py and predict.py as top-level importable modules
py-modules = ["features", "predict"]
